--- a/index.html
+++ b/index.html
@@ -196,53 +196,19 @@
         <div id="skills-content"></div>
       </div>
     </section>
-    <section id="timeline-project">
-      <div class="container">
-        <div class="timeline">
-          <ul>
-            <li>
-              <span>3rd January 2020</span>
-              <div class="content">
-                <h3>What Is Lorem Ipsum?</h3>
-                <p>
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry. Lorem Ipsum has been the industry's
-                  standard dummy text ever since the 1500s.
-                </p>
-              </div>
-            </li>
-            <li>
-              <span>21st Jun 2019</span>
-              <div class="content">
-                <h3>What Is Lorem Ipsum?</h3>
-                <p>
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
-                </p>
-              </div>
-            </li>
-            <li>
-              <span>15th April 2018</span>
-              <div class="content">
-                <h3>What Is Lorem Ipsum?</h3>
-                <p>
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
-                </p>
-              </div>
-            </li>
-            <li>
-              <span>22nd Mars 2017</span>
-              <div class="content">
-                <h3>What Is Lorem Ipsum?</h3>
-                <p>
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry. Lorem Ipsum has been the industry's
-                  standard.
-                </p>
-              </div>
-            </li>
-          </ul>
+    <section id="timeline-project" class="container mx-auto">
+      <h2>Timeline project in I&E Vietnam</h2>
+      <div class="timeline">
+        <ul class="timeline-list"></ul>
+        <div class="timeline-content hidden" id="content-display">
+          <h3 id="content-title" class=""></h3>
+          <img id="timeline-image">
+          <p id="content-text"></p>
+          <a target="_blank" id="linkGithub">Link Github: </a>
+          <a target="_blank" id="linkFTP">Link FTP: </a>
+          <button id="close-timeline-content" class="buttonCustom">
+            Close
+          </button>
         </div>
       </div>
     </section>
@@ -250,6 +216,7 @@
       <div class="ourTeam_footer_text">I'm bring you the best products</div>
       <div class="ourTeam_footer_text2">I'm bring you the best products</div>
     </section>
+    <section id="library"></section>
     <footer class="contact" id="contact-section">
       <div class="container">
         <div class="contact__content">
