update UI, review code

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <ul class="timeline-list"></ul>
         <div class="timeline-content hidden" id="content-display">
           <h3 id="content-title" class=""></h3>
-          <img id="timeline-image">
+          <img id="timeline-image" />
           <p id="content-text"></p>
           <a target="_blank" id="linkGithub">Link Github: </a>
           <a target="_blank" id="linkFTP">Link FTP: </a>
@@ -216,7 +216,19 @@
       <div class="ourTeam_footer_text">I'm bring you the best products</div>
       <div class="ourTeam_footer_text2">I'm bring you the best products</div>
     </section>
-    <section id="library"></section>
+    <section id="library">
+      <div class="container">
+        <h2>Time travel in Vietnam</h2>
+      </div>
+
+      <div class="slideshow-container-library">
+        <button class="prev-library">&#10094;</button>
+        <div class="slideshow-wrapper-library">
+          <div class="slides-library" id="slides-2"></div>
+        </div>
+        <button class="next-library">&#10095;</button>
+      </div>
+    </section>
     <footer class="contact" id="contact-section">
       <div class="container">
         <div class="contact__content">
