--- a/index.html
+++ b/index.html
@@ -131,30 +131,11 @@
         <div class="about-me__content">
           <div class="about-me__left">
             <div class="slideshow-container">
-              <div class="slides">
-                <div class="slide">
-                  <img src="./image/aboutme1.jpg" alt="Image 1" />
-                </div>
-                <div class="slide">
-                  <img src="./image/aboutme2.jpg" alt="Image 2" />
-                </div>
-                <div class="slide">
-                  <img src="./image/aboutme3.jpg" alt="Image 3" />
-                </div>
-                <div class="slide">
-                  <img src="./image/aboutme4.jpg" alt="Image 4" />
-                </div>
-                <div class="slide">
-                  <img src="./image/aboutme5.jpg" alt="Image 5" />
-                </div>
-                <div class="slide">
-                  <img src="./image/aboutme6.jpg" alt="Image 6" />
-                </div>
-              </div>
-              <button class="prev">
+              <div class="slides-aboutMe"></div>
+              <button class="prev-aboutMe">
                 <i class="fas fa-chevron-circle-left"></i>
               </button>
-              <button class="next">
+              <button class="next-aboutMe">
                 <i class="fas fa-chevron-circle-right"></i>
               </button>
             </div>
