fix UI responsive

--- a/index.html
+++ b/index.html
@@ -103,8 +103,10 @@
                 tập tại I&E Vietnam
               </h1>
               <p>
-                Xin chào quý anh chị, em là Nhân. Xin giới thiệu qua bản thâ
+                Xin chào quý anh chị, em là Nhân. Xin giới thiệu qua bản thân:
               </p>
+              <p>Birth : 17/07/2002</p>
+              <p>Provine : Giao Thuy, Nam Dinh</p>
             </div>
             <div class="logo__social__network">
               <a target="_blank" href="https://github.com/dinarcoins"
@@ -126,12 +128,15 @@
     </div>
   </header>
   <body>
+   
     <section class="about-me" id="aboutMe">
       <div class="container">
         <div class="about-me__content">
           <div class="about-me__left">
             <div class="slideshow-container">
-              <div class="slides-aboutMe"></div>
+              <div class="slides-aboutMe">
+                <!-- content aboutme -->
+              </div>
               <button class="prev-aboutMe">
                 <i class="fas fa-chevron-circle-left"></i>
               </button>
@@ -178,11 +183,16 @@
       </div>
     </section>
     <section id="timeline-project" class="container mx-auto">
+      <img
+        src="./image/winding-arrow-red.webp"
+        alt="arrow-red"
+        class="arrow-red"
+      />
       <h2>Timeline project in I&E Vietnam</h2>
       <div class="timeline">
         <ul class="timeline-list"></ul>
         <div class="timeline-content hidden" id="content-display">
-          <h3 id="content-title" class=""></h3>
+          <h3 id="content-title"></h3>
           <img id="timeline-image" />
           <p id="content-text"></p>
           <a target="_blank" id="linkGithub">Link Github: </a>
