--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
           <div class="menu__main">
             <div class="header__title">
               <h1 class="animate__animated animate__bounce">
-                Trình giới thiệu về bản thân (Nhân) - Thông tin quá trình thực
-                tập tại I&E Vietnam
+                Introduce - Thông tin quá trình thực tập tại I&E Vietnam
               </h1>
               <p>
                 Xin chào quý anh chị, em là Nhân. Xin giới thiệu qua bản thân:
               </p>
+              <p>Name : Hoang The Nhan (DinarCoins) </p>
               <p>Birth : 17/07/2002</p>
               <p>Provine : Giao Thuy, Nam Dinh</p>
             </div>
@@ -128,7 +128,6 @@
     </div>
   </header>
   <body>
-   
     <section class="about-me" id="aboutMe">
       <div class="container">
         <div class="about-me__content">
@@ -171,7 +170,10 @@
             </p>
             <p>
               Đi cùng sự phát triển của xã hội các vật liệu xây dựng mới dần
-              được đưa vào sử dụng, chúng cần thỏa mãn các tiêu chí về...
+              được đưa vào sử dụng, chúng cần thỏa mãn các tiêu chí về công
+              nghệ, nâng cấp kĩ năng trong xử lý công việc. Kèm theo đó là mục
+              tiêu nghề nghiệp rõ ràng, có định hướng và mindset tốt, lập
+              trường, tư duy tiến bộ
             </p>
           </div>
         </div>
