--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div id="trapezium"></div>
         <div class="container">
           <div class="logo">
-            <img src="image/logo-IE.png" alt="logoI&E" />
+            <img src="image/logo-I&E.png" alt="logoI&E" />
             <p>Hoang The Nhan - TTS I&E Vietnam</p>
           </div>
           <div class="header__logo__item"></div>
