--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               <p>
                 Xin chào quý anh chị, em là Nhân. Xin giới thiệu qua bản thân:
               </p>
-              <p>Name : Hoang The Nhan (DinarCoins) </p>
+              <p>Name : Hoang The Nhan (DinarCoins)</p>
               <p>Birth : 17/07/2002</p>
               <p>Provine : Giao Thuy, Nam Dinh</p>
             </div>
@@ -185,11 +185,9 @@
       </div>
     </section>
     <section id="timeline-project" class="container mx-auto">
-      <img
-        src="./image/winding-arrow-red.webp"
-        alt="arrow-red"
-        class="arrow-red"
-      />
+      <div class="arrow-red">
+        <img src="./image/winding-arrow-red.webp" alt="arrow-red" />
+      </div>
       <h2>Timeline project in I&E Vietnam</h2>
       <div class="timeline">
         <ul class="timeline-list"></ul>
