--- a/index.html
+++ b/index.html
@@ -200,6 +200,12 @@
         </div>
       </div>
     </section>
+    <section class="project" id="myProject">
+      <div class="container">
+        <h2>My Project</h2>
+        <div class="my-project-content"></div>
+      </div>
+    </section>
     <section class="ourTeam_footer">
       <div class="ourTeam_footer_text">I'm bring you the best products</div>
       <div class="ourTeam_footer_text2">I'm bring you the best products</div>
