--- a/index.html
+++ b/index.html
@@ -99,12 +99,11 @@
           <div class="menu__main">
             <div class="header__title">
               <h1 class="animate__animated animate__bounce">
-                Introduce - Thông tin quá trình thực tập tại I&E Vietnam
+                Introduce - Internship information at I&E Vietnam
               </h1>
               <p>
-                Xin chào quý anh chị, em là Nhân. Xin giới thiệu qua bản thân:
+               Hi! My name is Nhan (DinarCoins). Let viewing about my CV
               </p>
-              <p>Name : Hoang The Nhan (DinarCoins)</p>
               <p>Birth : 17/07/2002</p>
               <p>Provine : Giao Thuy, Nam Dinh</p>
             </div>
@@ -185,7 +184,7 @@
       </div>
     </section>
     <section id="timeline-project" class="container mx-auto">
-      <h2>Timeline project in I&E Vietnam</h2>
+      <h2 class="titleSection">Timeline project in I&E Vietnam</h2>
       <div class="timeline">
         <ul class="timeline-list"></ul>
         <div class="timeline-content hidden" id="content-display">
@@ -202,7 +201,7 @@
     </section>
     <section class="project" id="myProject">
       <div class="container">
-        <h2>My Project</h2>
+        <h2 class="titleSection">My Project</h2>
         <div class="my-project-content"></div>
       </div>
     </section>
@@ -212,7 +211,7 @@
     </section>
     <section id="library">
       <div class="container">
-        <h2>Time travel in Vietnam</h2>
+        <h2 class="titleSection">Time travel in Vietnam</h2>
       </div>
 
       <div class="slideshow-container-library">
