--- a/index.html
+++ b/index.html
@@ -101,9 +101,7 @@
               <h1 class="animate__animated animate__bounce">
                 Introduce - Internship information at I&E Vietnam
               </h1>
-              <p>
-               Hi! My name is Nhan (DinarCoins). Let viewing about my CV
-              </p>
+              <p>Hi! My name is Nhan (DinarCoins). Let viewing about my CV</p>
               <p>Birth : 17/07/2002</p>
               <p>Provine : Giao Thuy, Nam Dinh</p>
             </div>
@@ -224,26 +222,7 @@
     </section>
     <footer class="contact" id="contact-section">
       <div class="container">
-        <div class="contact__content">
-          <div class="contact__item">
-            <i class="las la-map-marker-alt"></i>
-            <a target="_blank" href="https://www.google.com/maps"
-              >Ton That Thuyet, Ha Noi</a
-            >
-          </div>
-          <div class="contact__item">
-            <i class="las la-phone-volume"></i>
-            <a href="tel:0876215779">0876215779</a>
-          </div>
-          <div class="contact__item">
-            <i class="lar la-envelope"></i>
-            <a href="mailto:work.nhanhoang@gmail.com">work.nhanhoang</a>
-          </div>
-          <div class="contact__item">
-            <i class="las la-globe-asia"></i>
-            <a target="_blank" href="www.ozonejsc.vn">www.ozonejsc.vn</a>
-          </div>
-        </div>
+        <div class="contact__content"></div>
       </div>
     </footer>
     <script
