--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <title>Portfolio Hoang The Nhan</title>
+    <title>CV - Hoang The Nhan</title>
     <link rel="stylesheet" href="./css/styles.css" />
     <script
       src="https://code.jquery.com/jquery-2.2.4.min.js"
@@ -99,11 +99,11 @@
           <div class="menu__main">
             <div class="header__title">
               <h1 class="animate__animated animate__bounce">
-                Introduce - Internship information at I&E Vietnam
+               Giới thiệu - Dự án riêng và thời gian tại I&E Vietnam
               </h1>
-              <p>Hi! My name is Nhan (DinarCoins). Let viewing about my CV</p>
-              <p>Birth : 17/07/2002</p>
-              <p>Provine : Giao Thuy, Nam Dinh</p>
+              <p>Xin chào! Tôi là Nhân (Dinarcoins), hãy checking qua CV của tôi nhé!</p>
+              <p>Sinh : 17/07/2002</p>
+              <p>Quê quán : Giao Thuy, Nam Dinh</p>
             </div>
             <div class="logo__social__network">
               <a target="_blank" href="https://github.com/dinarcoins"
@@ -149,7 +149,7 @@
           </div>
           <div class="about-me__right">
             <a href="#">Dinar Coins</a>
-            <h2>Introduce about myself</h2>
+            <h2>Giới thiệu về bản thân</h2>
             <p>
               Xin chào! Tôi là Nhân, một Front End Developer với kinh nghiệm
               thực tế trong việc phát triển ứng dụng web và giao diện người
@@ -213,20 +213,19 @@
     </section>
     <section class="project" id="myProject">
       <div class="container">
-        <h2 class="titleSection">My Project</h2>
+        <h2 class="titleSection">Dự án riêng</h2>
         <div class="project-content">
           <div>
             <ul class="">
-              <li>20+ project</li>
-              <li>100+ Client</li>
-              <li>2+ year</li>
+              <li>20+ Dự án</li>
+              <li>10+ Khách hàng</li>
+              <li>2+ năm kinh nghiệm</li>
             </ul>
           </div>
           <div class="my-project-content"></div>
           <div>
             <ul>
-              <li>5+ country</li>
-              <li>10 certificate</li>
+              <li>3+ quốc gia</li>
               <li></li>
             </ul>
           </div>
@@ -239,7 +238,7 @@
     </section> -->
     <section id="library">
       <div class="container">
-        <h2 class="titleSection">Time travel in Vietnam</h2>
+        <h2 class="titleSection">Mở rộng về bản thân</h2>
       </div>
 
       <div class="slideshow-container-library">
